PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Log__c/Interface_Service_Log__c.object-meta.xml
<CustomObject>
    <description>Interface Service Log</description>
    <label>Interface Service Log</label>
    <nameField>
        <displayFormat>IF_L_{YYYYMMDD}_{0000000}</displayFormat>
        <label>Interface Service Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>