PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Log__c/fields/Error_Messages__c.field-meta.xml
<CustomField>
    <fullName>Error_Messages__c</fullName>
    <description>인터페이스 수행 중 발생한 내용</description>
    <inlineHelpText>인터페이스 수행 중 발생한 내용</inlineHelpText>
    <label>에러메시지</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>