PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Log__c/fields/hp_fm_responseDate__c.field-meta.xml
<CustomField>
    <fullName>hp_fm_responseDate__c</fullName>
    <description>응답일시 한국시간(+9시간)</description>
    <formula>Response_Date__c + (9 / 24)</formula>
    <inlineHelpText>응답일시 한국시간(+9시간)</inlineHelpText>
    <label>fm_응답일시</label>
    <type>DateTime</type>
</CustomField>