PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Log__c/fields/Interface_id__c.field-meta.xml
<CustomField>
    <fullName>Interface_id__c</fullName>
    <description>인터페이스ID</description>
    <label>인터페이스ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>