PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Log__c/fields/Interface_Service_Master__c.field-meta.xml
<CustomField>
    <fullName>Interface_Service_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Interface Service Master</description>
    <inlineHelpText>Interface Service Master</inlineHelpText>
    <label>Interface Service Master</label>
    <referenceTo>Interface_Service_Master__c</referenceTo>
    <relationshipLabel>Interface Service Log</relationshipLabel>
    <relationshipName>Interface_Service_Log</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>