PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Log__c/fields/Request_Count__c.field-meta.xml
<CustomField>
    <fullName>Request_Count__c</fullName>
    <description>Request Count</description>
    <inlineHelpText>Request Count</inlineHelpText>
    <label>요청데이터 수</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>