PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Log__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <description>Request Date</description>
    <inlineHelpText>Request Date</inlineHelpText>
    <label>요청시간</label>
    <type>DateTime</type>
</CustomField>