PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Log__c/fields/Request_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Request_Parameters__c</fullName>
    <description>외부에서 요청시 등록한 파라메터 정보</description>
    <inlineHelpText>외부에서 요청시 등록한 파라메터 정보</inlineHelpText>
    <label>요청내용</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>