PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Log__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>수신 또는 송신 구분</description>
    <inlineHelpText>수신 또는 송신 구분</inlineHelpText>
    <label>송수신구분</label>
    <length>100</length>
    <type>Text</type>
</CustomField>