PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Log__c/fields/Response_Count__c.field-meta.xml
<CustomField>
    <fullName>Response_Count__c</fullName>
    <description>응답된 데이터의 개수</description>
    <inlineHelpText>응답된 데이터의 개수</inlineHelpText>
    <label>응답데이터 수</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>