PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Log__c/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <description>응답된 날짜와 시간</description>
    <inlineHelpText>응답된 날짜와 시간</inlineHelpText>
    <label>응답일시</label>
    <type>DateTime</type>
</CustomField>