PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Log__c/fields/Response_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Response_Parameters__c</fullName>
    <description>최종적으로 응답한 데이터</description>
    <inlineHelpText>최종적으로 응답한 데이터</inlineHelpText>
    <label>응답내용</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>