PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Log__c/fields/Run_Result__c.field-meta.xml
<CustomField>
    <fullName>Run_Result__c</fullName>
    <description>인터페이스 수행결과</description>
    <inlineHelpText>인터페이스 수행결과</inlineHelpText>
    <label>수행결과</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>