PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Log__c/fields/Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Run_Time__c</fullName>
    <description>요청을 받아 응답하는데 걸린 시간(밀리초)</description>
    <inlineHelpText>요청을 받아 응답하는데 걸린 시간(밀리초)</inlineHelpText>
    <label>수행시간(ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>