PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Log__c/fields/Run_Time_Second__c.field-meta.xml
<CustomField>
    <fullName>Run_Time_Second__c</fullName>
    <description>밀리초 수행시간을 초단위 소수점자리수 3까지 나타낸다.</description>
    <formula>Run_Time__c  / 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>밀리초 수행시간을 초단위 소수점자리수 3까지 나타낸다.</inlineHelpText>
    <label>수행시간(s)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>