PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Log__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <description>인터페이스에서 수행한 작업내용(마스터에 설정된 요청타입을 의미함)</description>
    <inlineHelpText>인터페이스에서 수행한 작업내용(마스터에 설정된 요청타입을 의미함)</inlineHelpText>
    <label>작업내용</label>
    <length>100</length>
    <type>Text</type>
</CustomField>