PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Log__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>Interface_id__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Run_Result__c</columns>
    <columns>Work_Type__c</columns>
    <columns>Run_Time__c</columns>
    <columns>Error_Messages__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>